add in footer new icon

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
                 <a class="icon" href="#"><img src="images/icon/facebook.png" alt=""></a>
                  <a class="icon" href="#"><img src="images/icon/twitter.png" alt=""></a>
                   <a class="icon" href="#"><img src="images/icon/weeeed.png" alt=""></a>
+                  <a class="icon-inner"
+                     href="#"><img src="images/icon/weeeed.png" alt=""></a>
                </footer>
     
 </body>
