add in header h1

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     
     <header class="header">
         <img class="heder-logo" src="images/logo.png" alt="">
+
+        <h1>fjdfjkgfjmfgbmgrbbmrgbm</h1>
     </header>
     
     <div class="main">
